--- a/.gdbinit.tmpl
+++ b/.gdbinit.tmpl
@@ -1,6 +1,6 @@
 set $lastcs = -1
 
-define hook-stop
+define hook-stop_flag
   # There doesn't seem to be a good way to detect if we're in 16- or
   # 32-bit mode, but in 32-bit mode we always run with CS == 8 in the
   # kernel and CS == 35 in user space
